--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
 
+#cabecera-gandalf {
+    height: 400px;
+    -webkit-animation: expand 2s;
+	-webkit-animation-delay: 4s;
+}
+
+@keyframes expand{
+    0%{height: 0px; }
+    100%{height: 400px; }
+}
