--- a/main.css
+++ b/main.css
@@ -4,27 +4,10 @@
 #cabecera-gandalf {
     height: 400px;
     -webkit-animation: expand 2s;
+	-webkit-animation-delay: 4s;
 }
+
 @keyframes expand{
     0%{height: 0px; }
     100%{height: 400px; }
 }
-.card-img-top {
-	max-width: 200px;
-	
-}
-
-#slider-gandalf{
-    width: 100%;
-    -webkit-animation: expand-left-right 2s;
-}
-@keyframes expand-left-right{
-    0%{width: 0%; }
-    100%{width: 100%; }
-}
-
-.hiddenFrame{
-    height:1px;
-    width:1px;
-    opacity: 0;
-    }
